--- a/sensors/date_time.yaml
+++ b/sensors/date_time.yaml
@@ -15,5 +15,16 @@
       value_template: >-
         {{now().strftime("%I")}}:{{now().strftime("%M")}} {{now().strftime("%p")}}
 
-
+- platform: template
+  sensors:
+    type_of_day:
+      friendly_name: 'Type of Day'
+      value_template: >-
+        {%- if now().strftime("%A") == "Saturday" -%}
+          Weekend
+        {%- elif now().strftime("%A") == "Sunday" -%}
+          Weekend
+        {%- else -%}
+          Weekday       
+        {%- endif -%}
 
