--- a/input_select.yaml
+++ b/input_select.yaml
@@ -6,3 +6,13 @@ alarm_mode:
     - "Partial"
     - "On"
 
+hvac_mode:
+  name: Thermostat Mode
+  initial: "On - Cool"
+  options:
+    - "Off"
+    - "On - Cool"
+    - "On - Heat"
+
+
+
